--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /Packages
 xcuserdata/
 DerivedData/
+.swiftpm/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .swiftpm/xcode/package.xcworkspace/xcshareddata
